tests/baselines/reference/invalid-incomplete-groupname-4.errors.txt
invalid-incomplete-groupname-4.ts(14,6): error TS1005: '>' expected.
invalid-incomplete-groupname-4.ts(14,8): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.


==== invalid-incomplete-groupname-4.ts (2 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupName is `< RegExpIdentifierName >`.
    esid: prod-GroupName
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /\k<a(?<a>a)/;
         
!!! error TS1005: '>' expected.
           ~~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
    